--- a/src/NextPage/Views/Controls/SearchBox.xaml
+++ b/src/NextPage/Views/Controls/SearchBox.xaml
@@ -4,17 +4,16 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:resources="clr-namespace:NextPage.Properties"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:views="clr-namespace:NextPage.Views"
     x:Name="view">
-    <Grid ColumnDefinitions="*,Auto">
-        <Entry
-            Grid.Column="0"
-            Placeholder="{x:Static resources:Resources.SearchPlaceholder}"
-            Text="{Binding Text, Source={x:Reference view}, Mode=TwoWay}" />
-
-        <views:IconButton
-            Grid.Column="1"
-            Command="{Binding SearchCommand, Source={x:Reference view}}"
-            IconSource="search.png" />
-    </Grid>
+    <Entry
+        Placeholder="{x:Static resources:Resources.SearchPlaceholder}"
+        Text="{Binding Text, Source={x:Reference view}, Mode=TwoWay}">
+        <Entry.Behaviors>
+            <toolkit:EventToCommandBehavior
+                Command="{Binding SearchCommand, Source={x:Reference view}}"
+                EventName="TextChanged" />
+        </Entry.Behaviors>
+    </Entry>
 </ContentView>
