--- a/src/NextPage/Views/HomePage.xaml
+++ b/src/NextPage/Views/HomePage.xaml
@@ -31,6 +31,7 @@
                     Grid.RowSpan="2"
                     Grid.Column="0"
                     Margin="{StaticResource StandardThicknessUnit}"
+                    SemanticProperties.Description="{x:Static resources:Resources.SemanticDescriptionLogo}"
                     Source="{AppThemeBinding Light='logolight.png',
                                              Dark='logo.png'}"
                     WidthRequest="70" />
@@ -52,7 +53,8 @@
                     Grid.Row="1"
                     Grid.Column="2"
                     Command="{Binding SortCommand}"
-                    IconSource="{Binding SortOrder, Converter={StaticResource SortOrderToSortImageConverter}}" />
+                    IconSource="{Binding SortOrder, Converter={StaticResource SortOrderToSortImageConverter}}"
+                    SemanticProperties.Description="{x:Static resources:Resources.SemanticDescriptionSortButton}" />
 
                 <Button
                     Grid.Row="2"
@@ -69,11 +71,13 @@
                     <VerticalStackLayout>
                         <ActivityIndicator
                             IsRunning="{Binding IsLoading}"
-                            IsVisible="{Binding IsLoading}" />
+                            IsVisible="{Binding IsLoading}"
+                            SemanticProperties.Description="{x:Static resources:Resources.SemanticDescriptionLoading}" />
                         <Label
                             Margin="{StaticResource StandardThicknessUnit}"
                             HorizontalTextAlignment="Center"
                             IsVisible="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"
+                            SemanticProperties.Description="{x:Static resources:Resources.SemanticDescriptionNoBooksMessage}"
                             Text="{x:Static resources:Resources.NoBooksMessage}" />
                     </VerticalStackLayout>
                 </CollectionView.EmptyView>
@@ -85,7 +89,8 @@
                                     <SwipeItemView
                                         BackgroundColor="{DynamicResource WarningRed}"
                                         Command="{Binding BindingContext.DeleteCommand, Source={x:Reference page}, Mode=OneTime}"
-                                        CommandParameter="{Binding .}">
+                                        CommandParameter="{Binding .}"
+                                        SemanticProperties.Description="{x:Static resources:Resources.SemanticDescriptionDeleteButton}">
                                         <Label
                                             Margin="30,0"
                                             Text="{x:Static resources:Resources.ButtonDelete}"
@@ -100,7 +105,8 @@
                                 Margin="{StaticResource StandardThicknessUnit}"
                                 ColumnDefinitions="*,*"
                                 RowDefinitions="*,*,Auto,*"
-                                RowSpacing="{StaticResource SmallThicknessUnit}">
+                                RowSpacing="{StaticResource SmallThicknessUnit}"
+                                SemanticProperties.Hint="{x:Static resources:Resources.SemanticDescriptionOpenBookInstruction}">
                                 <Grid.GestureRecognizers>
                                     <TapGestureRecognizer
                                         Command="{Binding BindingContext.ViewExistingBookCommand, Source={x:Reference page}, Mode=OneTime}"
@@ -152,6 +158,7 @@
             BackgroundColor="{AppThemeBinding Light={StaticResource Primary},
                                               Dark={StaticResource PrimaryDark}}"
             HeightRequest="70"
+            SemanticProperties.Description="{x:Static resources:Resources.SemanticDescriptionAddNewBookButton}"
             StrokeShape="RoundRectangle 35"
             StrokeThickness="0"
             WidthRequest="70">
@@ -164,6 +171,7 @@
                     PressedScale="0.8" />
             </Border.Behaviors>
             <Label
+                AutomationProperties.IsInAccessibleTree="False"
                 FontAutoScalingEnabled="False"
                 FontSize="46"
                 HorizontalOptions="Center"
