--- a/src/NextPage/Views/HomePage.xaml
+++ b/src/NextPage/Views/HomePage.xaml
@@ -103,7 +103,7 @@
                             <!--  Content  -->
                             <Grid
                                 Margin="{StaticResource StandardThicknessUnit}"
-                                ColumnDefinitions="*,*"
+                                ColumnDefinitions="*"
                                 RowDefinitions="*,*,Auto,*"
                                 RowSpacing="{StaticResource SmallThicknessUnit}"
                                 SemanticProperties.Hint="{x:Static resources:Resources.SemanticDescriptionOpenBookInstruction}">
@@ -121,18 +121,15 @@
                                 </Grid.Behaviors>
                                 <Label
                                     Grid.Row="0"
-                                    Grid.ColumnSpan="2"
                                     Text="{Binding Title, Mode=OneTime}"
                                     TextColor="{AppThemeBinding Light={StaticResource Primary},
                                                                 Dark={StaticResource PrimaryDark}}" />
                                 <Label
                                     Grid.Row="1"
-                                    Grid.ColumnSpan="2"
                                     FontAttributes="Italic"
                                     Text="{Binding Author, Mode=OneTime}" />
                                 <Label
                                     Grid.Row="2"
-                                    Grid.ColumnSpan="2"
                                     IsVisible="{Binding Description, Converter={StaticResource IsStringNotNullOrWhiteSpaceConverter}}"
                                     LineBreakMode="TailTruncation"
                                     MaxLines="2"
